# python-fun

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
00_Tests/: characters_response.json  clean_marvel_json.py  comics_response.json  events_response.json  fetch_marvel_characters.py  updated_characters_response.json  updated_comics_response.json  updated_events_response.json
01 Sierpinsky/: sierpinski_fractal.py
01_Marvel_Twitter_Bot/: .env.example  marvel_twitter_bot.py  pyproject.toml
01_Sierpinsky/: Makefile  pyproject.toml  sierpinski_fractal.ipynb  sierpinski_fractal.py
02_Telegram_Bot/: pyproject.toml  telegram_bot.py
02_Twitter_Telegram/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  twitter_telegram.py
03_Sierpinsky/: Makefile  pyproject.toml
03_Twitter_Telegram/: Makefile  requirements.txt
04_Twitter_Telegram/: .env.example  Dockerfile  pyproject.toml
05_Electricity_Price/: electricity_prices.ipynb  electricity_prices_graphs.ipynb  week_api_response.json  weekend_api_response.json
