[tool.poetry]
name = "python-fun"
version = "0.1.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.1"
python-dotenv = "^0.21.0"
tweepy = "^4.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"