[tool.poetry]
name = "python-fun"
version = "0.1.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
jupyterlab = "^3.6.1"
matplotlib = "^3.7.0"
python-dotenv = "^1.0.0"
tweepy = "^4.12.1"
openapi = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
