[tool.poetry]
name = "python-fun-marvel-twtter-bot"
version = "0.1.0"
description = ""
authors = ["Ariel Parra <darkaico@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.8.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = {version = "^22.3.0", allow-prereleases = true}
ipdb = "^0.13.9"
